Improve accessibility, security, and SEO

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Warp+ Flask</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Easy & free way to add 1GB to your WARP+. Open source on GitHub. Automate using the API.">
 </head>
 
 <body>
@@ -12,15 +13,15 @@
     <p>Easier to use than the Python script, which requires Python installation on your device.</p>
     <form action="/get">
         <label for="uid">Client ID (≡ > Advanced > Diagnostics > ID)</label>
-        <input type="text" name="uid" placeholder="1.1.1.1 Client ID">
+        <input type="text" id="uid" name="uid" placeholder="1.1.1.1 Client ID">
         <input type="submit">
     </form>
     <p style="color: orange;">{{ "Proxy is ACTIVE. Requests might be slower." if proxy == True}}</p>
     <p style="color: {{ color }};">{{ success }}</p>
     <p>Tip: Set up an IFTTT applet to automate adding a gigabyte of data. Use webhook: </p>
     <code>GET {{ host }}getjson?uid=&lt;Your 1.1.1.1 Client ID&gt;</code>
-    <p>This project is based on <a target="_blank" href="https://github.com/ALIILAPRO/warp-plus-cloudflare">ALIILAPRO/warp-plus-cloudflare</a>. CSS: <a target="_blank" href="https://github.com/kognise/water.css">kognise/water.css</a></p>
-    <p>Open source on <a target="_blank" href="https://github.com/deathlyface/warp-plus-flask">GitHub</a>!</p>
+    <p>This project is based on <a rel="noopener" target="_blank" href="https://github.com/ALIILAPRO/warp-plus-cloudflare">ALIILAPRO/warp-plus-cloudflare</a>. CSS: <a rel="noopener" target="_blank" href="https://github.com/kognise/water.css">kognise/water.css</a></p>
+    <p>Open source on <a rel="noopener" target="_blank" href="https://github.com/deathlyface/warp-plus-flask">GitHub</a>!</p>
 </body>
 
 </html>
