Move screenshot & add favicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,10 @@
 <head>
     <title>Warp+ Flask</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Easy & free way to add 1GB to your WARP+. Open source on GitHub. Automate using the API.">
+    
 </head>
 
 <body>
