--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Get +1GB 1.1.1.1 Warp+ Data</h1>
+    <h1>Get Unlimited* 1.1.1.1 Warp+ Data</h1>
     <p>Easier to use than the Python script, which requires Python installation on your device.</p>
     <form action="/get">
         <label for="uid">Client ID (≡ > Advanced > Diagnostics > ID)</label>
@@ -22,8 +22,11 @@
     <p style="color: {{ color }};">{{ success }}</p>
     <p>Tip: Set up an IFTTT applet to automate adding a gigabyte of data. Use webhook: </p>
     <code>GET {{ host }}getjson?uid=&lt;Your 1.1.1.1 Client ID&gt;</code>
-    <p>This project is based on <a rel="noopener" target="_blank" href="https://github.com/ALIILAPRO/warp-plus-cloudflare">ALIILAPRO/warp-plus-cloudflare</a>. CSS: <a rel="noopener" target="_blank" href="https://github.com/kognise/water.css">kognise/water.css</a></p>
-    <p>Open source on <a rel="noopener" target="_blank" href="https://github.com/deathlyface/warp-plus-flask">GitHub</a>!</p>
+    <p>This project is based on <a rel="noopener" target="_blank" href="https://github.com/ALIILAPRO/warp-plus-cloudflare">ALIILAPRO/warp-plus-cloudflare</a>. CSS: <a rel="noopener" target="_blank" href="https://github.com/kognise/water.css">kognise/water.css</a>.</p>
+	<p>*1GB per request, unlimited request.</p>
+	<footer>
+		Open source on GitHub: <a rel="noopener" target="_blank" href="https://github.com/deathlyface/warp-plus-flask">deathlyface/warp-plus-flask</a>!
+	</footer>
 </body>
 
 </html>
