--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Warp+ Flask</title>
+    <title>Warp+ GUI</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Easy & free way to add 1GB to your WARP+. Open source on GitHub. Automate using the API.">
-    
+
 </head>
 
 <body>
@@ -23,10 +23,10 @@
     <p>Tip: Set up an IFTTT applet to automate adding a gigabyte of data. Use webhook: </p>
     <code>GET {{ host }}getjson?uid=&lt;Your 1.1.1.1 Client ID&gt;</code>
     <p>This project is based on <a rel="noopener" target="_blank" href="https://github.com/ALIILAPRO/warp-plus-cloudflare">ALIILAPRO/warp-plus-cloudflare</a>. CSS: <a rel="noopener" target="_blank" href="https://github.com/kognise/water.css">kognise/water.css</a>.</p>
-	<p>*1GB per request, unlimited request.</p>
-	<footer>
-		Open source on GitHub: <a rel="noopener" target="_blank" href="https://github.com/deathlyface/warp-plus-flask">deathlyface/warp-plus-flask</a>!
-	</footer>
+    <p>*1GB per request, unlimited request.</p>
+    <footer>
+        Open source on GitHub: <a rel="noopener" target="_blank" href="https://github.com/deathlyface/warp-plus-gui">deathlyface/warp-plus-gui</a>!
+    </footer>
 </body>
 
 </html>
